fix Wrong alignment for 'Центр' cards after search

--- a/src/components/centerList/css/CenterList.less
+++ b/src/components/centerList/css/CenterList.less
@@ -126,7 +126,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow:hidden;
-  max-width:165px;
+  max-width:163px;
   height: 24px;
   color: #2D4C68;
   font-weight: 600;
